[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "asdfghjkl-old"
version = "0.1a2"
authors = [{ name = "Kazuki Osawa", email = "osawa1021@gmail.com" }]
description = "ASDL: Automatic Second-order Differentiation (for Fisher, Gradient covariance, Hessian, Jacobian, and Kernel) Library"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = ["torch >= 1.7.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/kazukiosawa/asdfghjkl"
"Bug Tracker" = "https://github.com/kazukiosawa/asdfghjkl/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = { namespaces = false }
